@@ -2,7 +2,8 @@ CHANGELOG RoundCube Webmail
 ---------------------------
 
 2008/10/01 (alec)
-- Stop spellchecking when switching to html editor (#1485362)
+- Fix spellchecking when switching to html editor (#1485362)
+- Fix compose window width/height (#1485396)
 
 2008/09/29 (alec)
 ----------
